Adding Armor Types

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -246,8 +246,10 @@
   "ACKS.items.Charge": "Charge",
 
   "ACKS.armor.type": "Armor Type",
-  "ACKS.armor.unarmored": "Unarmored",
+  "ACKS.armor.helm": "Helm",
+  "ACKS.armor.verylight": "Very Light",
   "ACKS.armor.light": "Light",
+  "ACKS.armor.medium": "Medium",
   "ACKS.armor.heavy": "Heavy",
   "ACKS.armor.shield": "Shield",
 
