party overview improvement
Now party overview will correctly show current / max encumbrance with a tooltip

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -104,6 +104,11 @@
   "ACKS.Attack": "Attack",
   "ACKS.Encumbrance": "Encumbrance",
   "ACKS.EncumbranceStone": "Encumbrance (st)",
+  "ACKS.EncumbranceTitle.Overburdened": "Overburdened",
+  "ACKS.EncumbranceTitle.High": "High Encumbrance",
+  "ACKS.EncumbranceTitle.Medium": "Medium Encumbrance",
+  "ACKS.EncumbranceTitle.Low": "Low Encumbrance",
+  "ACKS.EncumbranceTitle.Unencumbered": "Unencumbered",
 
   "ACKS.moneytitle": "Money",
   "ACKS.money.coppervalue": "Value (in Copper Coin)",
